Client side validation started

--- a/src/main/webapp/pageTemplate.xhtml
+++ b/src/main/webapp/pageTemplate.xhtml
@@ -17,7 +17,7 @@
   
   <p:layout fullPage="true">
     
-    <p:layoutUnit position="north" size="70" resizable="false" closable="false" collapsible="false" gutter="1">
+    <p:layoutUnit position="north" size="70" resizable="false" closable="false" collapsible="false">
       <ui:insert name="header">
         <div class="hit-header">
           <h:outputText value="COM Individual Information System" />
@@ -26,7 +26,14 @@
     </p:layoutUnit>
     
     <p:layoutUnit position="west" size="250" resizable="false" closable="false" collapsible="false" gutter="1">
-      <ui:insert name="menu">Menu Section</ui:insert>
+      <ui:insert name="menu">
+        <p:menu>
+          <p:menuitem value="Home" url="index.jsf"></p:menuitem>
+          <p:menuitem value="Search" url="searchPage.jsf"></p:menuitem>
+          <p:menuitem value="Client Validation" url="clientValidation.jsf"></p:menuitem>
+          <p:menuitem value="Another Page" url="anotherPage.jsf"></p:menuitem>
+        </p:menu>        
+      </ui:insert>
     </p:layoutUnit>
 
     <p:layoutUnit position="center" gutter="1">
