--- a/src/main/webapp/clientValidation.xhtml
+++ b/src/main/webapp/clientValidation.xhtml
@@ -4,24 +4,20 @@
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:p="http://primefaces.org/ui"
                 template="/WEB-INF/pageTemplate.xhtml">
-    
+
   <ui:define name="content">
 
     <h:form>
-
-      <p:growl sticky="true" severity="info,error,fatal" />
+      <p:growl severity="WARN,ERROR,FATAL" />
       <h:panelGrid>
-
+      <h:outputLabel for="name" value="Name:" />
+      <p:inputText id="name" value="#{bean.name}" label="Name"/>
+      <p:message for="name" />
       <h:outputLabel for="age" value="Age: (@Min(10) @Max(20))" />
-      <p:inputText id="age" value="#{validationBean.age}" label="Age"/>
+      <p:inputText id="age" value="#{bean.age}" label="Age"/>
       <p:message for="age" />
-
-      <h:outputLabel for="requiredText" value="Required Text:" />
-      <p:inputText name="requiredTex" required="true" />
-
       </h:panelGrid>
       <p:commandButton value="Save" validateClient="false" ajax="false" />
-
     </h:form>
 
   </ui:define>
