Experimenting with groovy managed beans

--- a/src/main/webapp/WEB-INF/pageTemplate.xhtml
+++ b/src/main/webapp/WEB-INF/pageTemplate.xhtml
@@ -32,7 +32,7 @@
           <p:menuitem value="Search" url="searchPage.jsf"></p:menuitem>
           <p:menuitem value="Client Validation" url="clientValidation.jsf"></p:menuitem>
           <p:menuitem value="Bean Validation" url="bean.jsf"></p:menuitem>
-          <p:menuitem value="Simple Bean Validation" url="simpleBV.jsf"></p:menuitem>
+          <p:menuitem value="Name Page (groovy bean)" url="namePage.jsf"></p:menuitem>
           <p:menuitem value="Another Page" url="anotherPage.jsf"></p:menuitem>
         </p:menu>
       </ui:insert>
