Groovy managed bean working!

--- a/src/main/webapp/WEB-INF/pageTemplate.xhtml
+++ b/src/main/webapp/WEB-INF/pageTemplate.xhtml
@@ -33,6 +33,7 @@
           <p:menuitem value="Client Validation" url="clientValidation.jsf"></p:menuitem>
           <p:menuitem value="Bean Validation" url="bean.jsf"></p:menuitem>
           <p:menuitem value="Name Page (groovy bean)" url="namePage.jsf"></p:menuitem>
+          <p:menuitem value="Employee" url="employee.jsf"></p:menuitem>
           <p:menuitem value="Another Page" url="anotherPage.jsf"></p:menuitem>
         </p:menu>
       </ui:insert>
