--- a/src/main/webapp/WEB-INF/baseTemplate.xhtml
+++ b/src/main/webapp/WEB-INF/baseTemplate.xhtml
@@ -7,27 +7,31 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui">
 
-<h:head>
-
-</h:head>
+<h:head></h:head>
 
 <h:body>
   <!-- referenced custom CSS here so that it is last loaded. -->
   <h:outputStylesheet library="css" name="common.css"/>
 
-  <p:layout fullPage="true">
+  <div class="ui-fluid">
 
-    <p:layoutUnit position="north" size="70" resizable="false" closable="false" collapsible="false">
-      <ui:insert name="header">
-        <div class="headerDiv">
+  <!-- header -->
+  <div class="ui-grid headerDiv ui-grid-responsive">
+    <div class="ui-grid-row">
+      <div class="ui-grid-col-12">
+        <ui:insert name="header">
           <h:outputText value="COM Individual Information System" />
-        </div>
-      </ui:insert>
-    </p:layoutUnit>
+        </ui:insert>
+      </div>
+    </div>
+  </div>
 
-    <p:layoutUnit position="west" size="250" resizable="false" closable="false" collapsible="false" gutter="1">
-      <ui:insert name="menu">
-        <p:menu>
+  <!-- side menu and page content -->
+  <div class="ui-grid  ui-grid-responsive">
+    <div class="ui-grid-row">
+      <div class="ui-grid-col-4 menuDiv">
+        <ui:insert name="menu">
+          <p:menu>
           <p:menuitem value="Home" url="index.jsf"></p:menuitem>
           <p:menuitem value="Search" url="searchPage.jsf"></p:menuitem>
           <p:menuitem value="Client Validation" url="clientValidation.jsf"></p:menuitem>
@@ -35,24 +39,24 @@
           <p:menuitem value="Name Page (groovy bean)" url="namePage.jsf"></p:menuitem>
           <p:menuitem value="Employee" url="employee.jsf"></p:menuitem>
           <p:menuitem value="Another Page" url="anotherPage.jsf"></p:menuitem>
-        </p:menu>
-      </ui:insert>
-    </p:layoutUnit>
+          </p:menu>
+        </ui:insert>
+      </div>
+      <div class="ui-grid-col-8 contentDiv">
+        <ui:insert name="content">Main Page Content</ui:insert>
+      </div>
+    </div>
+  </div>
 
-    <p:layoutUnit position="center" gutter="1">
-    <ui:insert name="content">Main Page Content</ui:insert>
-    </p:layoutUnit>
-
-    <p:layoutUnit position="south" size="50" resizable="false" closable="false" collapsible="false" gutter="1">
-    <ui:insert name="footer">
-      <div class="footerDiv">
+  <!-- footer -->
+  <div class="ui-grid footerDiv  ui-grid-responsive">
+    <div class="ui-grid-row">
+      <div class="ui-grid-col-12">
         <h:outputText value="Michigan State University Health Information Technology" />
       </div>
-    </ui:insert>
-    </p:layoutUnit>
+    </div>
+  </div>
 
-  </p:layout>
-
-
-  </h:body>
+  </div>
+</h:body>
 </html>
