Added managed beans

--- a/src/main/webapp/WEB-INF/pageTemplate.xhtml
+++ b/src/main/webapp/WEB-INF/pageTemplate.xhtml
@@ -30,11 +30,8 @@
         <p:menu>
           <p:menuitem value="Home" url="index.jsf"></p:menuitem>
           <p:menuitem value="Search" url="searchPage.jsf"></p:menuitem>
-          <p:menuitem value="Client Validation" url="clientValidation.jsf"></p:menuitem>
-          <p:menuitem value="Bean Validation" url="bean.jsf"></p:menuitem>
-          <p:menuitem value="Name Page (groovy bean)" url="namePage.jsf"></p:menuitem>
-          <p:menuitem value="Employee" url="employee.jsf"></p:menuitem>
-          <p:menuitem value="Another Page" url="anotherPage.jsf"></p:menuitem>
+          <p:menuitem value="Add Employee" url="addEmployee.jsf"></p:menuitem>
+          <p:menuitem value="Edit Employee" url="employee.jsf"></p:menuitem>
         </p:menu>
       </ui:insert>
     </p:layoutUnit>
