--- a/src/main/webapp/addEmployee.xhtml
+++ b/src/main/webapp/addEmployee.xhtml
@@ -9,10 +9,9 @@
 
     <h:form>
     <p:panel header="Add Employee">
-      <p:messages closable="true" severity="WARN,ERROR,FATAL"/>
-      <p:growl life="5000" severity="INFO" />
+      <p:messages closable="true" />
 
-      <p:panelGrid columns="2">
+      <p:panelGrid columns="2" styleClass="ui-noborder">
 
         <p:outputLabel for="firstName" value="First Name:" />
         <p:inputText id="firstName" value="#{employeeBean.firstName}" label="FirstName"/>
@@ -22,23 +21,23 @@
 
         <p:outputLabel for="email" value="EMail:" />
         <p:inputText id="email" value="#{employeeBean.email}" label="EMail"/>
-<!--
-        <p:outputLabel for="startdate" value="Start Date:" />
-        <p:calendar id="startdate" value="#{EmployeeBean.startDate}" />
--->
-        <p:outputLabel for="sickdays" value="Sick Days:" />
-        <p:inputMask id="sickdays" maxLength="3" mask="9?99" value="#{employeeBean.sickDays}"  />
-<!--
-        <p:outputLabel for="fringeratio" value="Fringe Ratio:" />
-        <p:inputMask id="fringeratio" maxLength="3" mask="9.99" value="#{EmployeeBean.fringeRatio}"  />
--->
-      </p:panelGrid>
 
-      <p:commandButton value="Save" validateClient="true" ajax="false"
-          action="#{employeeBean.create()}"  />
+        <p:outputLabel for="sickdays" value="Sick Days:" />
+        <p:inputMask id="sickdays" value="#{employeeBean.sickDays}"  />
+
+        <p:outputLabel for="fringeratio" value="Fringe Ratio:" />
+        <p:inputMask id="fringeratio" maxLength="3" mask="9.99" value="#{employeeBean.fringeRatio}"  />
+
+        <p:outputLabel for="startdate" value="Start Date:" />
+        <p:calendar id="startdate" value="#{employeeBean.startDate}" />
+
+        <p:commandButton value="Save" validateClient="true" ajax="false"
+            action="#{employeeBean.create()}"/>
+
+
+      </p:panelGrid>
     </p:panel>
     </h:form>
-
   </ui:define>
 
 </ui:composition>
