Added department drop down

--- a/src/main/webapp/addEmployee.xhtml
+++ b/src/main/webapp/addEmployee.xhtml
@@ -31,6 +31,12 @@
         <p:outputLabel for="startdate" value="Start Date:" />
         <p:calendar id="startdate" value="#{employeeBean.startDate}" />
 
+        <p:outputLabel for="departmentid" value="Department:" />
+        <p:selectOneMenu id="departmentid" value="#{employeeBean.departmentID}">
+          <f:selectItem itemLabel="Select Department" itemValue="" noSelectionOption="true" />
+          <f:selectItems value="#{departmentDDV.departments}" />
+        </p:selectOneMenu>
+                
         <p:commandButton value="Save" validateClient="true" ajax="false"
             action="#{employeeBean.create()}"/>
 
