--- a/src/main/webapp/employee.xhtml
+++ b/src/main/webapp/employee.xhtml
@@ -15,17 +15,23 @@
           <h:panelGrid columns="2">
 
           <p:outputLabel for="firstName" value="First Name:" />
-          <p:inputText id="firstName" value="#{employeeBean.firstName}" label="FirstName"/>
+          <p:inputText id="firstName" value="#{empBean.firstName}" label="FirstName"/>
 
           <p:outputLabel for="lastName" value="Last Name:" />
-          <p:inputText id="lastName" value="#{employeeBean.lastName}" label="LastName"/>
+          <p:inputText id="lastName" value="#{empBean.lastName}" label="LastName"/>
+
+          <p:outputLabel for="email" value="EMail:" />
+          <p:inputText id="email" value="#{empBean.email}" label="EMail"/>
 
           <p:outputLabel for="sickdays" value="Sick Days:" />
-          <p:inputMask id="sickdays" maxLength="3" mask="9?99" value="#{employeeBean.sickDays}"  />
+          <p:inputMask id="sickdays" maxLength="3" mask="9?99" value="#{empBean.sickDays}"  />
+
+          <p:outputLabel for="departmentid" value="Department ID:" />
+          <p:inputMask id="departmentid" maxLength="2" mask="99" value="#{empBean.departmentID}"  />
 
         </h:panelGrid>
           <p:commandButton value="Save" validateClient="true" ajax="false"
-          action="#{employeeBean.save()}"  />
+          action="#{empBean.create()}"  />
         </p:panel>
 
     </h:form>
