Got Groovy stored procedure calls working for CUD

--- a/src/main/webapp/WEB-INF/pageTemplate.xhtml
+++ b/src/main/webapp/WEB-INF/pageTemplate.xhtml
@@ -20,7 +20,7 @@
     <p:layoutUnit position="north" size="70" resizable="false" closable="false" collapsible="false">
       <ui:insert name="header">
         <div class="headerDiv">
-          <h:outputText value="COM Individual Information System" />
+          <h:outputText value="Employee Management Application" />
         </div>
       </ui:insert>
     </p:layoutUnit>
@@ -31,7 +31,8 @@
           <p:menuitem value="Home" url="index.jsf"></p:menuitem>
           <p:menuitem value="Search" url="searchPage.jsf"></p:menuitem>
           <p:menuitem value="Add Employee" url="addEmployee.jsf"></p:menuitem>
-          <p:menuitem value="Edit Employee" url="employee.jsf"></p:menuitem>
+          <p:menuitem value="Create Employee" url="createEmployee.jsf"></p:menuitem>
+          <p:menuitem value="Update Employee" url="updateEmployee.jsf"></p:menuitem>
         </p:menu>
       </ui:insert>
     </p:layoutUnit>
