--- a/src/main/webapp/updateEmployee.xhtml
+++ b/src/main/webapp/updateEmployee.xhtml
@@ -9,10 +9,13 @@
 
     <h:form>
 
-        <p:panel header="Employee">
+        <p:panel header="Update Employee">
           <p:messages closable="true" />
 
           <h:panelGrid columns="2">
+
+          <p:outputLabel for="employeeid" value="Employee ID:" />
+          <p:inputMask id="employeeid" maxLength="2" mask="99" value="#{empBean.employeeID}"  />
 
           <p:outputLabel for="firstName" value="First Name:" />
           <p:inputText id="firstName" value="#{empBean.firstName}" label="FirstName"/>
@@ -31,7 +34,7 @@
 
         </h:panelGrid>
           <p:commandButton value="Save" validateClient="true" ajax="false"
-          action="#{empBean.create()}"  />
+          action="#{empBean.update()}"  />
         </p:panel>
 
     </h:form>
